@@ -1,3 +1,6 @@
+2013-06-03 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
+	* Add lightbox keyboard navigation
+	
 2013-04-22 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
 	* Add description field to lightbox
 
